# kv-hierarchy-lab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/default_sweep/: README.md  results.csv  results.json  run_metadata.json
artifacts/regret_ablation/: README.md  aggregated_summary.csv  raw_results.json  run_metadata.json  summary.csv
examples/: basic_simulation.py  compare_policies.py
kv_hierarchy_lab/: __init__.py  config.py  types.py
kv_hierarchy_lab/bench/: __init__.py  report.py  runner.py  scenarios.py
kv_hierarchy_lab/policies/: __init__.py  base.py  cost_aware.py  heavy_hitter.py  lru.py  predictive.py  regret_aware.py  windowed.py
kv_hierarchy_lab/quant/: __init__.py  footprint.py  schemes.py
kv_hierarchy_lab/simulator/: __init__.py  engine.py  event.py  metrics.py  page.py  tier.py  trace.py
kv_hierarchy_lab/utils/: __init__.py  io.py  plotting.py
kv_hierarchy_lab/workloads/: __init__.py  patterns.py  synthetic.py
notebooks/: kv_policy_analysis.ipynb
scripts/: generate_trace.py  plot_results.py  run_benchmarks.py  run_regret_ablation.py
tests/: test_engine.py  test_policies.py  test_quant.py  test_workloads.py
