[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kv-hierarchy-lab"
version = "0.1.0"
description = "Trace-driven research harness for KV-cache hierarchy policy evaluation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "kv-hierarchy-lab contributors" }
]
dependencies = [
  "matplotlib>=3.8",
  "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["kv_hierarchy_lab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "D"]
ignore = ["D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"
